--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport"
-            content="width=device-width, initial-scale=1.0, viewport-fit=cover, height=device-height" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no"
+        />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta
+            name="apple-mobile-web-app-status-bar-style"
+            content="black-translucent"
+        />
         <title>Otsu PWA (ML Build)</title>
     </head>
 
     <body>
-        <div class="mainwrapper">
-            <div id="root"></div>
-        </div>
+        <div id="root" class="h-dvh"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
-
 </html>
