--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
 
     <body>
-        <div id="root" class="h-dvh"></div>
+        <div id="root" class=""></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
