--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no"
-        />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta
-            name="apple-mobile-web-app-status-bar-style"
-            content="black-translucent"
-        />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
         <title>Otsu PWA (ML Build)</title>
     </head>
 
@@ -19,4 +13,5 @@
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
+
 </html>
