--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <title>Otsu PWA (ML Build)</title>
     </head>
 
-    <body>
+    <body class="font-inter">
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
